--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
